some minor style fixes, fixes #46 and step visibility on start page

--- a/dudel/base/static/scss/form.scss
+++ b/dudel/base/static/scss/form.scss
@@ -244,7 +244,7 @@ section.section {
 }
 
 .form-step {
-    $color: #CCC;
+    $color: #444;
 
     text-align: center;
     color: $color;
