--- a/dudel/base/static/scss/main.scss
+++ b/dudel/base/static/scss/main.scss
@@ -161,7 +161,7 @@ td.vote-comment {
 
 
 .script-only {
-    display: none;
+    display: none !important;
 }
 
 footer {
